apps/miniflux/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: miniflux
    app.kubernetes.io/name: miniflux
  name: miniflux
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: miniflux
    app.kubernetes.io/name: miniflux
  type: ClusterIP
